--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "author": "czfadmin",
+  "publisher": "czfadmin",
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./dist/extension.js",
   "contributes": {
     "views": {
@@ -49,9 +53,12 @@
     "watch-tests": "tsc -p . -w --outDir out",
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
     "lint": "eslint src --ext ts",
-    "test": "vscode-test"
+    "test": "vscode-test",
+    "generate": "tsx ./scripts/index.ts"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.2.2",
+    "@commitlint/config-angular": "^19.2.2",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@types/vscode": "^1.88.0",
@@ -61,15 +68,18 @@
     "@vscode/test-electron": "^2.3.9",
     "eslint": "^8.57.0",
     "ts-loader": "^9.5.1",
+    "tsx": "^4.7.2",
     "typescript": "^5.3.3",
+    "vitest": "^1.5.0",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "mobx": "^6.12.3",
+    "ofetch": "^1.3.4",
     "reflect-metadata": "^0.2.2",
-    "typedi": "^0.10.0",
-    "vitest": "^1.5.0"
+    "typedi": "^0.10.0"
   },
-  "packageManager": "yarn@1.22.19"
+  "packageManager": "yarn@1.22.19",
+  "types": "module"
 }
