--- a/package.json
+++ b/package.json
@@ -54,9 +54,16 @@
     "pretest": "yarn run compile-tests && yarn run compile && yarn run lint",
     "lint": "eslint src --ext ts",
     "test": "vscode-test",
-    "generate": "tsx ./scripts/index.ts"
+    "generate": "tsx ./scripts/index.ts",
+    "lint-staged": "lint-staged",
+    "l10n": "node ./node_modules/@vscode/l10n-dev/dist/cli.js export -o ./l10n ./src",
+    "commitlint": "commitlint --edit $1",
+    "version": "changeset version",
+    "change": "changeset",
+    "bump": "changeset publish"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-angular": "^19.2.2",
     "@types/mocha": "^10.0.6",
@@ -72,13 +79,22 @@
     "typescript": "^5.3.3",
     "vitest": "^1.5.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "@release-it/conventional-changelog": "^8.0.1",
+    "@vscode/l10n-dev": "^0.0.31",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.0.2"
   },
   "dependencies": {
     "mobx": "^6.12.3",
     "ofetch": "^1.3.4",
     "reflect-metadata": "^0.2.2",
-    "typedi": "^0.10.0"
+    "typedi": "^0.10.0",
+    "@vscode/l10n": "^0.0.16"
+  },
+  "lint-staged": {
+    "*.{ts,js}": "eslint --fix",
+    "**/*": "prettier --write --ignore-unknown"
   },
   "packageManager": "yarn@1.22.19",
   "types": "module"
