--- a/package.json
+++ b/package.json
@@ -66,31 +66,32 @@
     "@changesets/cli": "^2.26.2",
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-angular": "^19.2.2",
+    "@release-it/conventional-changelog": "^8.0.1",
     "@types/mocha": "^10.0.6",
     "@types/node": "18.x",
     "@types/vscode": "^1.88.0",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
+    "@vscode/l10n-dev": "^0.0.31",
     "@vscode/test-cli": "^0.0.8",
     "@vscode/test-electron": "^2.3.9",
     "eslint": "^8.57.0",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.0.2",
     "ts-loader": "^9.5.1",
     "tsx": "^4.7.2",
     "typescript": "^5.3.3",
     "vitest": "^1.5.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "@release-it/conventional-changelog": "^8.0.1",
-    "@vscode/l10n-dev": "^0.0.31",
-    "husky": "^8.0.0",
-    "lint-staged": "^15.0.2"
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
+    "@vscode/l10n": "^0.0.16",
     "mobx": "^6.12.3",
     "ofetch": "^1.3.4",
     "reflect-metadata": "^0.2.2",
     "typedi": "^0.10.0",
-    "@vscode/l10n": "^0.0.16"
+    "vsc-extension-helper": "^0.0.1"
   },
   "lint-staged": {
     "*.{ts,js}": "eslint --fix",
